<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bean.java.food_store.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:background="#fdfdfd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/register"
            android:gravity="center"
            android:textSize="30dp"
            android:id="@+id/toolbarText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_marginLeft="60dp"
            android:id="@+id/txtName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="60dp"
            android:id="@+id/txtSurname"
            android:hint="@string/surname"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/username"
            android:id="@+id/txtUsername"
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/email"
            android:id="@+id/txtEmail"
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/password"
            android:id="@+id/txtPassword"
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/cPassword"
            android:id="@+id/txtCpassword"
            android:layout_marginLeft="60dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="67dp" />


</LinearLayout>
